# rag

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_share.sh
.streamlit/: config.toml
apps/: mcp_server.py  streamlit_app.py
src/rag/: config.py
src/rag/api/: app.py  schemas.py
src/rag/core/: llm.py  vectorstore.py
src/rag/db/: __init__.py  schema.sql  store.py
src/rag/services/: agentic_rag.py  crew.py  ingestion.py
