[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag"
version = "0.1.0"
description = "Agentic RAG demo — a team of AI Agents (CrewAI) + Ollama local LLM + ChromaDB"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
